--- a/public/index.html
+++ b/public/index.html
@@ -2,47 +2,77 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>SOIL</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <!-- Dialogflow Messenger Integration -->
+    <link rel="stylesheet" href="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/themes/df-messenger-default.css">
+    <script src="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/df-messenger.js"></script>
+    <df-messenger
+      project-id="journaler-ai-bot"
+      agent-id="3b287d4f-cdaf-4e85-aceb-a8a0eea1c905"
+      language-code="en">
+      <df-messenger-chat-bubble chat-title="Mr Journaler"></df-messenger-chat-bubble>
+    </df-messenger>
+    <style>
+      df-messenger {
+        z-index: 999;
+        position: fixed;
+        --df-messenger-font-color: #000;
+        --df-messenger-font-family: Google Sans;
+        --df-messenger-chat-background: #f3f6fc;
+        --df-messenger-message-user-background: #d3e3fd;
+        --df-messenger-message-bot-background: #fff;
+        bottom: 16px;
+        right: 16px;
+      }
+    </style>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        const originalSetItem = sessionStorage.setItem;
+  
+        sessionStorage.setItem = function (key, value) {
+            originalSetItem.apply(this, arguments);
+            if (key === 'df-messenger-chatBubbleExpansion') {
+                const chatBubbleExpanded = value === 'true';
+                if (chatBubbleExpanded) {
+                    checkActiveUserAndGreet();
+                }
+            }
+        };
+        function checkActiveUserAndGreet() {
+            const activeUser = JSON.parse(localStorage.getItem('activeUser'));
+            let greetingMessage = "G'day, how can I help you?";
+            const greetingDisplayed = JSON.parse(localStorage.getItem('greetingDisplayed'));
+
+            if (activeUser && activeUser.name) {
+              if (!greetingDisplayed){
+                greetingMessage = `G'day ${activeUser.name}, how can I help you?`;
+                localStorage.setItem('greetingDisplayed', 'true');
+                const dfMessenger = document.querySelector('df-messenger');
+                if (dfMessenger) {
+                    dfMessenger.renderCustomText(greetingMessage, true);
+                }
+              }
+            }else{
+              if (!greetingDisplayed){
+                localStorage.setItem('greetingDisplayed', 'true');
+                const dfMessenger = document.querySelector('df-messenger');
+                if (dfMessenger) {
+                    dfMessenger.renderCustomText(greetingMessage, true);
+                }
+              }
+            }
+         }
+      });
+    </script>
   </body>
 </html>
