--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       id="chatbot"
       project-id="journaler-ai-bot"
       agent-id="3b287d4f-cdaf-4e85-aceb-a8a0eea1c905"      
+      allow-feedback="all"
       language-code="en">
       <df-messenger-chat-bubble chat-title="Mr Journaler"></df-messenger-chat-bubble>
     </df-messenger>
