--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
     <df-messenger
       id="chatbot"
       project-id="journaler-ai-bot"
-      agent-id="3b287d4f-cdaf-4e85-aceb-a8a0eea1c905"      
+      agent-id="3b287d4f-cdaf-4e85-aceb-a8a0eea1c905"
+      allow-feedback="all"      
       language-code="en">
       <df-messenger-chat-bubble chat-title="Mr Journaler"></df-messenger-chat-bubble>
     </df-messenger>
